src/styles.css
body {
  font-family: 'Poppins', sans-serif;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

section {
  background-color: #1C1D25;
  color: white;
}

/* HERO PAGE */

.hero {
  background-color: #1C1D25;
  height: 100vh;
  color: white;
  font-size: 40px;
}


.logo {
  height: 85px;
  margin: 30px;
  animation: 2s infinite forwards good-dog;
  position: relative;
}

@keyframes good-dog {
  90% {
    transform: translate(0) rotate(0) scale(1);
  } 91% {
    transform: rotate(-5deg) scaleY(0.9);
  } 95% {
    transform: rotate(15deg) translateY(-15px);
  } 100% {
    transform: translateY(0) rotate(0);
  }
}

nav {
  display: flex;
  justify-content: space-between;
}


ul.nav-list {
  display: flex;
  list-style-type: none;
  width: 500px;
  justify-content: space-around;
  font-size: 30px;
}


.hamburger {
  display: none;
}


li {
  text-decoration: none;
}

h1, h2, h3 {
  text-shadow: 
    1px 1px 0 #222,
    2px 2px 0 rgb(228, 104, 145);
}

h1 {
  font-size: 90px;
  margin: 0;
}


h2 {
  margin-top: 0;
  font-size: 50px;
  color: white;
}


p.title {
  margin: 0;
  font-size: 50px;
  font-weight: 300;
}


a {
  text-decoration: none;
  color: white;
}

/* NAV */
a[class*="hover-text-"] { transition: 1200ms; }
a[class*="hover-text-"]:hover {
  filter: invert(0.5) sepia(1) hue-rotate(280deg) saturate(3);
}

.hero-area {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}


.hero-text {
  margin-left: 60px;
  margin-bottom: 200px;
}


/* SOCIAL ICONS */

.socials {
  padding-bottom: 200px;
  margin: 20px;
}

a[class*="hover-text-"], #social-icons a { transition: 1200ms; }
a[class*="hover-text-"]:hover, #social-icons a:hover {
  filter: invert(0.5) sepia(1) hue-rotate(280deg) saturate(3);
}

/* BUTTON */

.button {
  width: 150px;
  height: 50px;
  border-radius: 35px;
  background-color: rgb(228, 104, 145);
  text-align: center;
  font-size: 25px;
  font-weight: 300;
  padding-top: 5px;
  margin-top: 20px;
  color: white;
}

.button:hover {
  background-color: rgb(255, 189, 89);
}

.button:active {
  background-color: #B5A9FF;
  color: #808080;
}


/* ABOUT ME */

.about {
  display: flex;
  justify-content: space-around;
  padding: 40px;
  text-align: center;

}


.personal-info {
  max-width: 75vw;
  font-size: 25px;
  word-spacing: 8px;
}


.headshot {
  width: min(250px, 90vw);
  border-radius: 150px;
  margin: 10px;
}


.headshot-container {
  display: flex;
  align-items: center;
}

/* SKILLS */

.skills-container {
  font-size: 25px;
  padding-top: 50px;
  display: grid;
  justify-content: center;
  text-align: center;
  align-items: center;
  padding-bottom: 100px;

}

.skills > a > * {
  justify-content: center;
  transform: scale(1);
  transition: 200ms;
}

.skills > a > *:hover {
  transform: scale(1.2);
}

/* PROJECTS */


.projects {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding-bottom: 100px;
}


.project-container {
  display: flex;
  justify-content: space-around;
}


.project-card {
  width: min(250px, 90vw);
  border-radius: 50px;
}

.project-card > a {
  display: flex;
  align-items: center;
  justify-content: ;
  height: 240px;
}


.project-img {
  box-shadow: 0 0 16px -5px #B5A9FF;
  transition: 500ms;
  width: min(275px, 90%);
  border-radius: 25px;
}

.project-img:hover {
  box-shadow: 0 0 32px -10px #B5A9FF;
  transform: scale(1.2);
}


.project-description {
  font-size: 15px;
  font-weight: 300;
}


.project-link {
  text-decoration: none;
  color: rgb(255, 189, 89);
}



/* CONTACT  */

#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 80px;
}


.contact-form {
  display: inline-block;
  text-align: center;
}

.form-button {
  display: block;
  width: 150px;
  height: 45px;
  border: none;
  border-radius: 35px;
  background-color: rgb(228, 104, 145);
  text-align: center;
  font-size: 20px;
  font-weight: 300;
  padding-top: 5px;
  margin-top: 20px;
  color: white;
}

.form-button:hover {
  background-color: rgb(255, 189, 89);

}

.form-button:active {
  background-color: #B5A9FF;
  color: white;
}


.input-field {
  font-family: 'Poppins', sans-serif;
  display: block;
  width: min(300px, 90vw);
  height: 50px;
  margin-top: 20px;
  padding-left: 10px;
  padding-right: 10px;
  border: 1px solid #777;
  border-radius: 15px;
  outline: none;
}

.textarea-field {
  font-family: 'Poppins', sans-serif;
  width: min(320px, 90vw);
  height: 150px;
  margin-top: 20px;
  padding-top: 10px;
  border-radius: 15px;
}


/* --- MEDIA QUERIES --- */

/* NAV SECTION */

@media only screen and (max-width: 1000px) {
  .hamburger {
    display: block;
    border: 0;
    background-color: transparent;
    color: white;
    font-size: 35px;
    margin: 25px;
    align-self: flex-end;
  }

  ul.nav-list {
    display: none;
    background-color: #22232c;
    margin: 0px;
    align-items: inherit;
  }

  ul.show {
    display: block;
  }


  nav {
    display: flex;
    flex-direction: column-reverse;
    background-color: #22232c;
    overflow: hidden;
  }

  #bita {
    position: fixed;
    bottom: 0;
    left: 0;
    padding: 0;
    margin: 0;
    width: 40px;
    height: 40px;
    transform: scale(0.1);
  }

  /* .logo {
    display: none; 
    margin: 0; padding: 0;
  } */ 

}


/* HERO AND SOCIALS */

@media only screen and (min-width: 360px) and (max-width: 768px) {


  #hero-area {
    display: flex;
    flex-wrap: wrap;
    overflow: hidden;
    justify-content: center;

  }

  h1 {
    font-size: 50px;
    margin: 0;
  }
  
  
  p.title {
    margin: 0;
    font-size: 40px;
    font-weight: 300;
  }


  #hero-text {
    margin-bottom: 30px;
    font-size: 10vw;
  }


  #social-icons {
    display: inline-flex;
    flex-direction: row;
    gap: 20px;
  }

}


/* ABOUT SECTION */

@media only screen and (min-width: 360px) and (max-width: 768px) {
  #about-me {
    font-size: 15px;
    display: flex;
    flex-wrap: wrap;
  }

  /* SKILLS SECTION  */

  .skills-container {
    padding-top: 50px;
    display: grid;
    padding: 15px;
    justify-content: center;
    text-align: center;
    align-items: center;
    font-size: larger;
    padding-bottom: 200px;

  }

  .skills {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 10px;
  }

}



/* PROJECTS SECTION */

@media only screen and (min-width: 360px) and (max-width: 768px) {

  .project-img {
    box-shadow: 0 0 16px -5px #B5A9FF;
    transition: 500ms;
    border-radius: 25px;

  }

  .project-img:hover {
    box-shadow: 0 0 32px -10px #B5A9FF;
  }

  .project-descriptions {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;

  }

  .project-link {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
  }
}



@media only screen and (max-width: 1000px) {

  .project-container {
    display: flex;
    flex-wrap: wrap;
  }

  .project-card {
    margin: 50px;
  }

  .project-img {
    box-shadow: 0 0 16px -5px #B5A9FF;
    transition: 500ms;
    object-fit: cover;
    border-radius: 25px;

  }


  .project-img:hover {
    box-shadow: 0 0 32px -10px #B5A9FF;
  }

  .project-descriptions {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;

  }

  .project-link {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    margin-bottom: 25px;
  }
}

@media only screen and (min-width: 1001px) {

  #project-container {
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    text-align: center;
    flex-wrap: wrap;

  }
  
  .project-img {
    box-shadow: 0 0 16px -5px #B5A9FF;
    transition: 500ms;
    object-fit: cover;
    border-radius: 25px;

  }


  .project-img:hover {
    box-shadow: 0 0 32px -10px #B5A9FF;
  }

  .project-description {
    font-size: 15px;
    font-weight: 300;
  }

  .project-link {
    text-decoration: none;
    color: rgb(255, 189, 89);
  }

}


/* CONTACT SECTION */

@media only screen and (min-width: 360px) and (max-width: 768px) {
  #contact {
    display: block;
    text-align: center;    
  }
}

